--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "deploy": "ng deploy --base-href=https://mixtern.github.io/app-store-parser-frontend/",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build:prod": "cross-env NODE_ENV=production ng build --prod"
@@ -34,6 +35,7 @@
     "@tailwindcss/typography": "latest",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "codelyzer": "^6.0.0",
     "cross-env": "^7.0.3",
     "jasmine-core": "~3.6.0",
